<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.idbcgroup.canopyverde.UserProfile">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" >

    </android.support.v7.widget.Toolbar>

    <ImageButton
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_mapmode"
        android:layout_alignBottom="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/map"
        android:text="@string/logout"/>

    <ImageButton
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginRight="17dp"
        android:background="@android:drawable/ic_menu_edit"
        android:paddingTop="5dp"
        android:layout_alignTop="@+id/profilepic"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="17dp" />

    <ImageButton
        android:id="@+id/profilepic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/circle"
        android:scaleType="centerCrop"
        android:src="@drawable/map"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/fullNameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilepic"
        android:layout_centerHorizontal="true"
        android:text="@string/full_name" />

    <TextView
        android:id="@+id/usernameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fullNameDisplay"
        android:layout_alignStart="@+id/fullNameDisplay"
        android:layout_below="@+id/fullNameDisplay"
        android:text="@string/username" />

    <TextView
        android:id="@+id/emailDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example"
        android:layout_below="@+id/usernameDisplay"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/badgeImg"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/graphic"
        android:layout_below="@+id/emailDisplay"
        android:layout_toRightOf="@+id/map"
        android:layout_toEndOf="@+id/map"
        android:layout_marginTop="17dp" />

    <TextView
        android:id="@+id/badgeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/badge"
        android:layout_above="@+id/gamePoints"
        android:layout_toLeftOf="@+id/logout"
        android:layout_toStartOf="@+id/logout" />

    <TextView
        android:id="@+id/gamePoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/badgeImg"
        android:layout_alignLeft="@+id/badgeName"
        android:layout_alignStart="@+id/badgeName"
        android:text="1000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/gamePoints"
        android:layout_toEndOf="@+id/gamePoints"
        android:layout_toRightOf="@+id/gamePoints"
        android:text="@string/points" />


</RelativeLayout>