<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.idbcgroup.canopyverde.RegisterActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <ProgressBar
        android:id="@+id/load"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/first_edit_text"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/fullName"
        android:background="@drawable/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:layout_below="@+id/username"
        android:layout_alignStart="@+id/username" />

    <EditText
        android:id="@+id/email"
        android:background="@drawable/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/fullName"
        android:layout_alignStart="@+id/fullName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/email"
        android:layout_alignStart="@+id/username"/>

    <ImageButton
        android:id="@+id/showPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_menu_view"
        android:layout_below="@+id/email"
        android:layout_marginEnd="10dp"
        android:layout_alignEnd="@+id/password"
        android:layout_marginTop="12dp" />

    <!--EditText
        android:id="@+id/country"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/country"
        android:layout_below="@+id/password"
        android:layout_alignStart="@+id/password" /-->

    <Spinner
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/email"
        android:layout_below="@+id/password"
        android:entries="@array/country_array"
        android:spinnerMode="dropdown"
        style="@style/spinnerItemStyle"
        android:background="@drawable/spinner"
        android:layout_alignStart="@+id/email" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/drop"
        android:src="@drawable/drop"
        android:layout_alignEnd="@+id/password"
        android:layout_toEndOf="@+id/logo"
        android:layout_above="@+id/city"
        android:layout_below="@+id/password" />


    <!--EditText
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"

        android:inputType="textPersonName"
        android:hint="@string/city"
        android:layout_below="@+id/country"
        android:layout_alignEnd="@+id/drop" /-->


    <Spinner
        android:id="@+id/city"
        android:background="@drawable/last_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/city_array"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/country"
        android:layout_alignStart="@+id/email"
        android:layout_alignEnd="@+id/email" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/drop_2"
        android:src="@drawable/drop"
        android:layout_alignEnd="@+id/password"
        android:layout_toEndOf="@+id/logo"
        android:layout_below="@+id/country"
        android:layout_alignBottom="@+id/city" />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/button"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/colorCanopyLight"
        android:layout_marginBottom="21dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/email"
        android:layout_alignEnd="@+id/email" />

</RelativeLayout>
