<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.idbcgroup.canopyverde.UserProfileActivity">

    <RelativeLayout
        android:id="@+id/userContent"
        android:background="@color/black_overlay"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" >

        </android.support.v7.widget.Toolbar>

        <ImageButton
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/toolbar1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="backToMap"
            app:srcCompat="@android:drawable/ic_menu_mapmode" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/map"
            android:onClick="logout"
            android:text="@string/logout" />

        <ImageButton
            android:id="@+id/edit"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/toolbar1"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/ic_menu_edit"
            android:onClick="editProfile" />

        <ImageView
            android:id="@+id/profilepic"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_below="@+id/toolbar1"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/map" />

        <TextView
            android:id="@+id/fullNameDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:text="@string/full_name"
            android:layout_marginTop="2dp"
            android:layout_below="@+id/profilepic"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/usernameDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="3dp"
            android:layout_below="@+id/fullNameDisplay"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/emailDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example"
            android:layout_below="@+id/usernameDisplay"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/badgeImg"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:layout_below="@+id/emailDisplay"
            android:layout_alignStart="@+id/fullNameDisplay" />

        <TextView
            android:id="@+id/gamePoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1000"
            android:layout_alignBottom="@+id/badgeImg"
            android:layout_toStartOf="@+id/usernameDisplay" />

        <TextView
            android:id="@+id/badgeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/badge"
            android:layout_alignBaseline="@+id/gamePoints"
            android:layout_alignBottom="@+id/gamePoints"
            android:layout_alignEnd="@+id/fullNameDisplay" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="326dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tabs" />

    </RelativeLayout>

</RelativeLayout>
